--- a/css/shop-homepage.css
+++ b/css/shop-homepage.css
@@ -1,5 +1,4 @@
 /*!
- * Start Bootstrap - Shop Homepage HTML Template (http://startbootstrap.com)
  * Code licensed under the Apache License v2.0.
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
@@ -19,6 +18,9 @@ body {
 .carousel-control,
 .item {
     border-radius: 4px;
+}
+.carousel-inner {
+	height:263px;
 }
 
 .caption {
